# learn-rust

./: .envrc  .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  LICENSE  build.py  config.toml  devshell.toml  environment.org  flake.nix  publish.el  rust-toolchain.toml
.github/workflows/: checks.yaml  docs.yml  nix-flake-ci.yaml
devshell/: default.nix  devshell.toml
nix/: commands.toml  devshell.toml  flake.nix  gen.sh  overlays.nix  rust.nix
nix/cells/automation/: configs.nix  devshells.nix
nix/cells/repo/: configs.nix  shells.nix
nix/src/: __init.nix  pops.nix
nix/std/: flake.nix
nix/std/cells/repo/: configs.nix  pops.nix  shells.nix
org/: .orgids  guangtao_nix.org  guangtao_rust.org  hugo.setup  learning_rust.org  learning_rust_30days.org  rust_performance.org  rust_project.org
pet/: config.toml  snippet.toml
srcs/cli-test/: Cargo.toml
srcs/cli-test/src/: main.rs
srcs/cli-test/tests/: cli.rs
srcs/hello_rust/: Cargo.toml
srcs/hello_rust/src/: main.rs
srcs/html2md-example/: Cargo.toml
srcs/html2md-example/src/: main.rs
srcs/minigrep/: Cargo.toml
srcs/minigrep/src/: main.rs
srcs/std/: Cargo.toml
srcs/std/src/: main.rs
srcs/zero2prod/: Cargo.toml  rust.md
srcs/zero2prod/src/: lib.rs
